--- a/index.html
+++ b/index.html
@@ -1,80 +1,23 @@
-javascript:(async function(){
-  const apiKey = 'PASTE_YOUR_API_KEY_HERE';
-  
-  const box = document.createElement('div');
-  box.style = "position:fixed;top:20px;right:20px;width:300px;background:white;color:black;border:2px solid #4285f4;border-radius:8px;padding:15px;z-index:999999;box-shadow:0 4px 15px rgba(0,0,0,0.3);font-family:sans-serif;";
-  box.innerHTML = `<div style="display:flex;justify-content:space-between;margin-bottom:10px;"><b style="color:#4285f4">Gemini 3 Scanner</b><button onclick="this.parentElement.parentElement.remove()">X</button></div><div id="ai-status" style="max-height:400px;overflow-y:auto;font-size:14px;">Initializing...</div><canvas id="ai-canvas" style="display:none;"></canvas>`;
-  document.body.appendChild(box);
-  const status = document.getElementById('ai-status');
+<button id="copyBtn" style="padding: 10px 20px; background-color: #4285f4; color: white; border: none; border-radius: 5px; cursor: pointer; font-family: sans-serif; font-weight: bold;">
+  Get Gemini 3 Scanner Code
+</button>
 
-  try {
-    const stream = await navigator.mediaDevices.getDisplayMedia({ video: { displaySurface: "browser" } });
-    const video = document.createElement('video');
-    video.srcObject = stream;
-    await video.play();
+<script>
+  document.getElementById('copyBtn').addEventListener('click', function() {
+    const codeToCopy = `javascript:(async function(){  const apiKey = 'PASTE_YOUR_API_KEY_HERE';    const box = document.createElement('div');  box.style = "position:fixed;top:20px;right:20px;width:300px;background:white;color:black;border:2px solid #4285f4;border-radius:8px;padding:15px;z-index:999999;box-shadow:0 4px 15px rgba(0,0,0,0.3);font-family:sans-serif;";  box.innerHTML = \`<div style="display:flex;justify-content:space-between;margin-bottom:10px;"><b style="color:#4285f4">Gemini 3 Scanner</b><button onclick="this.parentElement.parentElement.remove()">X</button></div><div id="ai-status" style="max-height:400px;overflow-y:auto;font-size:14px;">Initializing...</div><canvas id="ai-canvas" style="display:none;"></canvas>\`;  document.body.appendChild(box);  const status = document.getElementById('ai-status');  try {    const stream = await navigator.mediaDevices.getDisplayMedia({ video: { displaySurface: "browser" } });    const video = document.createElement('video');    video.srcObject = stream;    await video.play();    const canvas = document.getElementById('ai-canvas');    canvas.width = video.videoWidth;    canvas.height = video.videoHeight;    canvas.getContext('2d').drawImage(video, 0, 0);    const base64Image = canvas.toDataURL('image/jpeg').split(',')[1];    stream.getTracks().forEach(track => track.stop());    status.innerText = "Gemini 3 is thinking...";    const response = await fetch(\`https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent?key=\${apiKey}\`, {      method: 'POST',      headers: { 'Content-Type': 'application/json' },      body: JSON.stringify({        contents: [{          parts: [            { text: "Solve the question in this screenshot accurately and concisely." },            { inline_data: { mime_type: "image/jpeg", data: base64Image } }          ]        }],        safetySettings: [          { category: "HARM_CATEGORY_HARASSMENT", threshold: "BLOCK_NONE" },          { category: "HARM_CATEGORY_HATE_SPEECH", threshold: "BLOCK_NONE" },          { category: "HARM_CATEGORY_SEXUALLY_EXPLICIT", threshold: "BLOCK_NONE" },          { category: "HARM_CATEGORY_DANGEROUS_CONTENT", threshold: "BLOCK_NONE" }        ]      })    });    const data = await response.json();    if (data.error) {        status.innerText = "API Error: " + data.error.message;    } else if (!data.candidates || data.candidates.length === 0) {        status.innerText = "No response. Check your API key or usage limits.";    } else {        status.innerText = data.candidates[0].content.parts[0].text;    }  } catch (err) {    status.innerText = "System Error: " + err.message;  }})();`;
 
-    const canvas = document.getElementById('ai-canvas');
-    canvas.width = video.videoWidth;
-    canvas.height = video.videoHeight;
-    canvas.getContext('2d').drawImage(video, 0, 0);
-    const base64Image = canvas.toDataURL('image/jpeg').split(',')[1];
-
-    stream.getTracks().forEach(track => track.stop());
-    status.innerText = "Gemini 3 is thinking...";
-
-    /* Updated to Gemini 3 Flash Preview */
-    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-3-flash-preview:generateContent?key=${apiKey}`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        contents: [{
-          parts: [
-            { text: "Solve the question in this screenshot accurately and concisely." },
-            { inline_data: { mime_type: "image/jpeg", data: base64Image } }
-          ]
-        }],
-        /* Lowering safety barriers so it doesn't block homework/test questions */
-        safetySettings: [
-          { category: "HARM_CATEGORY_HARASSMENT", threshold: "BLOCK_NONE" },
-          { category: "HARM_CATEGORY_HATE_SPEECH", threshold: "BLOCK_NONE" },
-          { category: "HARM_CATEGORY_SEXUALLY_EXPLICIT", threshold: "BLOCK_NONE" },
-          { category: "HARM_CATEGORY_DANGEROUS_CONTENT", threshold: "BLOCK_NONE" }
-        ]
-      })
+    navigator.clipboard.writeText(codeToCopy).then(() => {
+      const btn = document.getElementById('copyBtn');
+      const originalText = btn.innerText;
+      btn.innerText = 'Copied!';
+      btn.style.backgroundColor = '#34a853'; // Change to green
+      
+      setTimeout(() => {
+        btn.innerText = originalText;
+        btn.style.backgroundColor = '#4285f4'; // Back to blue
+      }, 2000);
+    }).catch(err => {
+      console.error('Failed to copy: ', err);
     });
-
-    const data = await response.json();
-
-    if (data.error) {
-        status.innerText = "API Error: " + data.error.message;
-    } else if (!data.candidates || data.candidates.length === 0) {
-        status.innerText = "No response. Check your API key or usage limits.";
-    } else {
-        status.innerText = data.candidates[0].content.parts[0].text;
-    }
-
-  } catch (err) {
-    status.innerText = "System Error: " + err.message;
-  }
-})();                                               ENDS.....................................
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-YOU NEED A GEMINI AI API CODE
+  });
+</script>
